// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedText schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'locale'
    Path:     LocalizedText.schema.json#/required
  should have required property 'text'
    Path:     LocalizedText.schema.json#/required
"
`;

exports[`LocalizedText schema (1) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  .locale should match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <string> ene
    Path:     LocalizedText.schema.jsonlocale.pattern.schema.json/pattern
"
`;

exports[`LocalizedText schema (2) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  .locale should match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <string> en-USofA
    Path:     LocalizedText.schema.jsonlocale.pattern.schema.json/pattern
"
`;

exports[`LocalizedText schema (3) match fails for invalid config -> Invalid Text: Invalid Text 1`] = `
"expect(received).toMatchSchema(schema)

received
  .text should NOT be shorter than 1 characters
    Received: <empty string>
    Path:     LocalizedText.schema.json#/properties/text/minLength
"
`;

exports[`LocalizedText schema (4) match fails for invalid config -> missing locale: missing locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'locale'
    Path:     LocalizedText.schema.json#/required
"
`;

exports[`LocalizedText schema (5) match fails for invalid config -> empty locale & text: empty locale & text 1`] = `
"expect(received).toMatchSchema(schema)

received
  .locale should match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <empty string>
    Path:     LocalizedText.schema.jsonlocale.pattern.schema.json/pattern
  .text should NOT be shorter than 1 characters
    Received: <empty string>
    Path:     LocalizedText.schema.json#/properties/text/minLength
"
`;

exports[`LocalizedText schema (6) match fails for invalid config -> missing text: missing text 1`] = `
"expect(received).toMatchSchema(schema)

received
  should have required property 'text'
    Path:     LocalizedText.schema.json#/required
"
`;
